<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPlum"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/last_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textQuoq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/qq"
                android:textSize="18sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/buttonPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorRed"
                android:text="@string/photo"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/buttonBiog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/biog"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/buttonTrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorGreen"
                android:text="@string/trap"
                android:textColor="@color/colorWhite" />

            <ImageView
                android:id="@+id/imageViewSani2"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/sanisani" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/dec" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:layout_gravity="end"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/decad" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>